# serial_watcher

./: .gitignore  meson.build  meson_options.txt
inc/: sw_uart.h
src/: app.c  sw_uart.c
tpl/: app.h
